--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "JetBrainsMono Nerd Font", monospace;
+    font-family: "JetBrainsMono Nerd Font Mono", monospace;
     font-size: 14px; 
 }
 
